[package]
name = "wickdl"
version = "0.2.0"
authors = ["Waddlesworth <github@genj.io>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
hyper-tls = "0.4"
bytes = "0.5"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3"
flate2 = "1.0"
# Crypto stuff
aes-soft = "0.3"
block-modes = "0.3"
hex = "0.4"
john-wick-parse = { git = "https://github.com/SirWaddles/JohnWickParse" }