[package]
name = "wickdl"
version = "0.3.1"
authors = ["Waddlesworth <github@genj.io>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5"
bytes = "0.5"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3"
flate2 = "1.0"
john-wick-parse = { git = "https://github.com/SirWaddles/JohnWickParse" }

[dependencies.hyper]
version = "0.14"
default-features = false
features = [ "client", "stream", "http1", "http2" ]